KubeExample/Ingress/apacheSvcClusterIP.yaml
kind: Service
apiVersion: v1
metadata:
  name: apachesvc
spec:
  type: ClusterIP  
  selector:
    app-name: apache
  ports:
    - name: apache-port
      port: 80
