KubeExample/Ingress/nginxSvcClusterIP.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginxsvc
spec:
  type: ClusterIP  
  selector:
    app-name: nginx
  ports:
    - name: nginx-port
      port: 80
